Fix #114060: GPv3: Avoid crashes for multiple curve grease pencil objects

The problem was that the array of `IndexMask`s was set to the number of objects selected and not the number of curves in all selected objects.